[package]
name = "eternal_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
